--- a/index.html
+++ b/index.html
@@ -3,22 +3,85 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Live Coding</title>
+    <title>Boolzapp</title>
     <script src="https://kit.fontawesome.com/95701d90ff.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">  
     <link rel="stylesheet" href="./assets/css/style.css">    
 </head>
 <body>
 
-   <div id='app'>
+   <!-- Background -->
+   <div id='app' class="vh-100 d-flex justify-content-center align-items-center">
 
+      <!-- Interface container -->
+      <main class="bg-secondary d-flex">
 
+         <!-- Left side -->
+         <div class="left-side">
 
+            <!-- Up bar -->
+            <div class="bar-up d-flex justify-content-between align-items-center px-3 border-end border-1">
 
+               <div class="d-flex align-items-center">
+                  <img src="./assets/img/avatar_io.jpg" alt="my-avatar" class="avatar me-2">
+                  <span class="fw-semibold">Sofia</span>
+               </div>
 
+               <div class="d-flex align-items-center">
+                  <a href="#"><i class="fa-solid fa-circle-notch"></i></a>
+                  <a href="#"><i class="fa-solid fa-message mx-3"></i></a>
+                  <a href="#"><i class="fa-solid fa-ellipsis-vertical"></i></a>
+               </div>
+            </div>
 
+            <!-- Chats container -->
+            <div class="h-100 bg-white w-100">
+               
+               <!-- Notifications container -->
+               <div class="d-flex px-3 py-2 align-items-center notification-bg">
+                  <div class="notification-icon d-flex justify-content-center align-items-center me-2">
+                     <i class="fa-solid fa-bell-slash notification-bell"></i>
+                  </div>
+                  <div>
+                     <div class="fw-bold">
+                        Ricevi notifiche di nuovi messaggi
+                     </div>
+                     <a href="#" class="notification-font">Attiva notifiche desktop</a>
+                  </div>
+               </div>
 
+               <!-- Search chat bar container -->
+               <div>
 
+               </div>
+
+               <!-- Chats list container -->
+               <div>
+
+               </div>
+            </div>
+
+         </div>
+
+         <!-- Right Side -->
+         <div class="right-side">
+
+            <!-- Up bar -->
+            <div class="bar-up">
+               
+            </div>
+
+            <!-- Current chat container -->
+            <div>
+               Current Chat
+            </div>
+
+         </div>
+
+      </main>
 	</div>
 
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
