--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="bar-up d-flex justify-content-between align-items-center px-3 border-end border-1">
 
                <div class="d-flex align-items-center">
-                  <img src="./assets/img/avatar_io.jpg" alt="my-avatar" class="avatar me-2">
+                  <img src="./assets/img/avatar_io.jpg" alt="my-avatar" class="avatar-self me-2">
                   <span class="fw-semibold">Sofia</span>
                </div>
 
@@ -38,7 +38,7 @@
             </div>
 
             <!-- Chats container -->
-            <div class="h-100 bg-white w-100">
+            <div class="bg-white chats-container d-flex flex-column">
                
                <!-- Notifications container -->
                <div class="d-flex px-3 py-2 align-items-center notification-bg">
@@ -54,12 +54,118 @@
                </div>
 
                <!-- Search chat bar container -->
-               <div>
-
-               </div>
+               <div class="input-group p-1 bg-search-bar">
+                  <span class="input-group-text bg-white rounded-0" id="search-bar"><i class="fa-solid fa-magnifying-glass search-icon"></i></span>
+                  <input type="text" class="form-control search-bar border-start-0 rounded-0" placeholder="Cerca o inizia una nuova chat">
+                </div>
 
                <!-- Chats list container -->
-               <div>
+               <div class="overflow-auto">
+
+                  <!-- Chat template -->
+                  <div class="border-top py-2 px-3 d-flex justify-content-between">
+                     <div class="d-flex">
+                        <img src="./assets/img/avatar_1.jpg" class="avatar me-2" alt="avatar">
+                        <div>
+                           <div class="fw-medium bigger-font">Michele</div>
+                           <div class="secondary-font">Ultimo messaggio inviato</div>
+                        </div>
+                     </div>
+                     <div class="secondary-font">
+                        12:00
+                     </div>                     
+                  </div>
+
+                  <div class="border-top py-2 px-3 d-flex justify-content-between">
+                     <div class="d-flex">
+                        <img src="./assets/img/avatar_2.jpg" class="avatar me-2" alt="avatar">
+                        <div>
+                           <div class="fw-medium bigger-font">Fabio</div>
+                           <div class="secondary-font">Ultimo messaggio inviato</div>
+                        </div>
+                     </div>
+                     <div class="secondary-font">
+                        12:00
+                     </div>                     
+                  </div>
+
+                  <div class="border-top py-2 px-3 d-flex justify-content-between">
+                     <div class="d-flex">
+                        <img src="./assets/img/avatar_3.jpg" class="avatar me-2" alt="avatar">
+                        <div>
+                           <div class="fw-medium bigger-font">Samuele</div>
+                           <div class="secondary-font">Ultimo messaggio inviato</div>
+                        </div>
+                     </div>
+                     <div class="secondary-font">
+                        12:00
+                     </div>                     
+                  </div>
+
+                  <div class="border-top py-2 px-3 d-flex justify-content-between">
+                     <div class="d-flex">
+                        <img src="./assets/img/avatar_4.jpg" class="avatar me-2" alt="avatar">
+                        <div>
+                           <div class="fw-medium bigger-font">Alessandro B.</div>
+                           <div class="secondary-font">Ultimo messaggio inviato</div>
+                        </div>
+                     </div>
+                     <div class="secondary-font">
+                        12:00
+                     </div>                     
+                  </div>
+
+                  <div class="border-top py-2 px-3 d-flex justify-content-between">
+                     <div class="d-flex">
+                        <img src="./assets/img/avatar_5.jpg" class="avatar me-2" alt="avatar">
+                        <div>
+                           <div class="fw-medium bigger-font">Alessandro L.</div>
+                           <div class="secondary-font">Ultimo messaggio inviato</div>
+                        </div>
+                     </div>
+                     <div class="secondary-font">
+                        12:00
+                     </div>                     
+                  </div>
+
+                  <div class="border-top py-2 px-3 d-flex justify-content-between">
+                     <div class="d-flex">
+                        <img src="./assets/img/avatar_6.jpg" class="avatar me-2" alt="avatar">
+                        <div>
+                           <div class="fw-medium bigger-font">Claudia</div>
+                           <div class="secondary-font">Ultimo messaggio inviato</div>
+                        </div>
+                     </div>
+                     <div class="secondary-font">
+                        12:00
+                     </div>                     
+                  </div>
+
+                  <div class="border-top py-2 px-3 d-flex justify-content-between">
+                     <div class="d-flex">
+                        <img src="./assets/img/avatar_7.jpg" class="avatar me-2" alt="avatar">
+                        <div>
+                           <div class="fw-medium bigger-font">Federico</div>
+                           <div class="secondary-font">Ultimo messaggio inviato</div>
+                        </div>
+                     </div>
+                     <div class="secondary-font">
+                        12:00
+                     </div>                     
+                  </div>
+
+                  <div class="border-top py-2 px-3 d-flex justify-content-between">
+                     <div class="d-flex">
+                        <img src="./assets/img/avatar_8.jpg" class="avatar me-2" alt="avatar">
+                        <div>
+                           <div class="fw-medium bigger-font">Davide</div>
+                           <div class="secondary-font">Ultimo messaggio inviato</div>
+                        </div>
+                     </div>
+                     <div class="secondary-font">
+                        12:00
+                     </div>                     
+                  </div>
 
                </div>
             </div>
