--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
                <div class="d-flex align-items-center">
                   <img src="./assets/img/avatar_io.jpg" alt="my-avatar" class="avatar-self me-2">
-                  <span class="fw-semibold">Sofia</span>
+                  <span class="bigger-font fw-medium">Sofia</span>
                </div>
 
                <div class="d-flex align-items-center">
@@ -176,13 +176,36 @@
          <div class="right-side">
 
             <!-- Up bar -->
-            <div class="bar-up">
-               
+            <div class="bar-up d-flex justify-content-between align-items-center px-3">
+               <div class="d-flex">
+                  <img src="./assets/img/avatar_1.jpg" class="avatar-self me-2" alt="avatar">
+                  <div>
+                     <div class="fw-medium bigger-font">Michele</div>
+                     <div class="last-access">Ultimo accesso oggi alle 12:00</div>
+                  </div>
+               </div>
+
+               <div class="d-flex align-items-center">
+                  <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
+                  <a href="#"><i class="fa-solid fa-paperclip mx-3"></i></a>
+                  <a href="#"><i class="fa-solid fa-ellipsis-vertical"></i></a>
+               </div>
             </div>
 
             <!-- Current chat container -->
-            <div>
-               Current Chat
+            <div class="d-flex flex-column current-chat-container">
+
+               <!-- Chat with messagges -->
+               <div class="current-chat overflow-auto">
+                  
+               </div>
+
+               <!-- Text area -->
+               <div class="bar-down d-flex justify-content-around align-items-center">
+                  <a href="#"><i class="fa-regular fa-face-smile"></i></a>
+                  <input type="text" id="messagge-input" class="form-control w-75 h-75 border-0 text-bar" placeholder="Scrivi un messaggio">
+                  <a href="#"><i class="fa-solid fa-microphone"></i></a>
+               </div>
             </div>
 
          </div>
