--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                         {{message.message}}
                      </div>
                      <div class="secondary-font align-self-end me-1">
-                        {{message.date}}
+                        {{convertDate(message.date)}}
                      </div>
                   </div>
 
@@ -122,7 +122,7 @@
                <!-- Text area -->
                <div class="bar-down d-flex justify-content-around align-items-center">
                   <a href="#"><i class="fa-regular fa-face-smile"></i></a>
-                  <input type="text" id="messagge-input" class="form-control w-75 h-75 border-0 input-bar" placeholder="Scrivi un messaggio">
+                  <input type="text" id="messagge-input" class="form-control w-75 h-75 border-0 input-bar" placeholder="Scrivi un messaggio" v-model="input" @keyup.enter="sendMessage(input)">
                   <a href="#"><i class="fa-solid fa-microphone"></i></a>
                </div>
             </div>
@@ -132,6 +132,7 @@
       </main>
 	</div>
 
+   <script src="https://cdn.jsdelivr.net/npm/luxon@3.4.3/build/global/luxon.min.js"></script>
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
    <script type="text/javascript" src="./assets/js/script.js"></script>
