fix bug with 0 messages in chat

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                   <img :src="contacts[activeChat].avatar" class="avatar avatar-sm me-2" alt="avatar">
                   <div>
                      <div class="font-size mb-1">{{contacts[activeChat].name}}</div>
-                     <div class="secondary-font">Ultimo accesso {{lastAccessDate()}} alle {{lastAccessHour()}}</div>
+                     <div class="secondary-font">Ultimo accesso {{lastAccessDate()}} {{lastAccessHour()}}</div>
                   </div>
                </div>
 
